v2.0
- Update repository location to run over HTTPS
- Update addon version to be compliant with Kodi 17+
- Change default location (the new target is amsd.go.ro/clue/repos/addons)

v1.4
- Update resources and references
- Update addon version to be compliant with Kodi 15 and 16
- Apply changes for Kodi compatibility
- Addon icon has been changed (rebranding)
- Initiate new Clue repository located to amsd.go.ro/clue/mcrep
- Replicate Clue logo as icon for this family's plugins
- Translate metadata in English, German, French and Romanian
- Create physical repository and related resources to maintain it